--- a/style.css
+++ b/style.css
@@ -78,12 +78,12 @@ header {
 }
 
 .x {
-  background-image: url("/img/x.png");
+  background-image: url("./img/x.png");
   background-size: 10rem;
 }
 
 .o {
-  background-image: url("/img/o.png");
+  background-image: url("./img/o.png");
   background-size: 10rem;
 }
 
