--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ header {
 }
 
 .o {
-  background-image: url("https://github.com/MayerIckowicz/tic-tac-toe-game/blob/master/img/o.png?raw=true");
+  background-image: url("img/o.png");
   background-size: 10rem;
 }
 
